# pepper-motion-mapping

./: README.md
joint_converter/: CMakeLists.txt  package.xml
joint_converter/launch/: data_collector.launch  joint_converter.launch
joint_converter/models/: left_arm_ANN_model  right_arm_ANN_model
joint_converter/script/: collect_data.py  convert_joint.py  spec.py  train_model.ipynb
joint_converter_msgs/: CMakeLists.txt  package.xml
joint_converter_msgs/msg/: PepperJoint.msg
move_pepper/: CMakeLists.txt  package.xml
move_pepper/config/: pepper.rviz
move_pepper/launch/: move_pepper.launch
move_pepper/script/: pepper_move.py
