<?xml version="1.0"?>
<package format="2">
  <name>joint_converter_msgs</name>
  <version>0.1.0</version>
  <description>custom message for mapping skeleton tracking to pepper robot joints</description>
  <maintainer email="jiang.he@mail.utoronto.ca">Kevin He</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>std_msgs</build_export_depend>

</package>
